# SCEAP2.0

./: README.md
backend/: cable_engine.py  catalog_importer.py  main.py  pyproject.toml  routes.py  schemas.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: catalog.ts  client.ts
frontend/src/components/cable/: CableBulkTable.tsx  CableResultsPanel.tsx  CableSizingForm.tsx  CableUploadWizard.tsx  CableVisualizationCard.tsx  ExportModal.tsx
frontend/src/components/catalog/: CatalogWizardModal.tsx
frontend/src/components/layout/: BackendStatus.tsx  LayoutShell.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/shared/: ErrorBoundary.tsx
frontend/src/pages/: CableSizingPage.tsx
frontend/src/types/: catalog.ts
